mongodb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: mongo-db
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
